// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer renders Customer component 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--CustomerInformation"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Customer information
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-input InputField Field--Email"
      >
        <div
          class="stx-input"
        >
          <input
            aria-readonly="false"
            class="stx-input__input-element"
            id="stxField1"
            name="email"
            placeholder="Email"
            type="email"
            value=""
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Customer renders Customer component with errors 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--CustomerInformation"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Customer information
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--alert stx-field--with-input InputField Field--Email"
      >
        <div
          class="stx-input stx-input--alert"
        >
          <input
            aria-readonly="false"
            class="stx-input__input-element"
            id="stxField2"
            name="email"
            placeholder="Email"
            type="email"
            value=""
          />
        </div>
        <div
          class="stx-field__message"
        >
          Email format is invalid.
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Customer renders authenticated Customer with pre-filled data 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--CustomerInformation"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Customer information
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-input InputField Field--Email"
        readonly=""
      >
        <div
          class="stx-input stx-input--is-read-only"
        >
          <input
            aria-readonly="true"
            class="stx-input__input-element"
            id="stxField3"
            name="email"
            placeholder="Email"
            readonly=""
            type="email"
            value="john.doe@email.com"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
